feat: se trae transaccion
